# CIS

./: .clippy-fixes.md  .dead-code-cleanup-plan.md  .element-interface-analysis.md  .gitignore  .matrix-register-skill-design.md  .simplification-report.md  CHANGELOG.md  CHANGES_v1.1.5.md  CLAUDE.md  CLEANUP_REPORT_v1.1.5.md  CODE_REVIEW_TASKS_COMPLETED.md  CODE_REVIEW_v1.1.5.md  CODE_STATISTICS.md  Cargo.toml  D05-2_SECURE_P2P_TRANSPORT_IMPLEMENTATION.md  Dockerfile  Dockerfile.cross  Dockerfile.debian  Dockerfile.dev  Dockerfile.release  IMPLEMENTATION_SUMMARY.md  INSTALL.md  Makefile  P0_SECURITY_FIXES_COMPLETE_REPORT.md  PHASE4_SUMMARY.md  PLAN.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_SETUP_COMPLETE.md  Readme.md  SECURITY.md  SECURITY_FIXES_SUMMARY.md  START.md  TASKS.md  TODO_LIST.md  cis-v1.1.6-start-parallel.sh  codecov.yml  config.node1.toml  deny.toml  docker-compose.dev.yml  (+14 more)
cis-common/: Cargo.toml
cis-common/cis-memory/: Cargo.toml
cis-common/cis-memory/src/: entry.rs  error.rs  lib.rs  memory.rs
cis-common/cis-memory/tests/: placeholder.rs
cis-common/cis-p2p/: Cargo.toml
cis-common/cis-p2p/src/: error.rs  lib.rs  network.rs  protocol.rs
cis-common/cis-scheduler/: Cargo.toml
cis-common/cis-scheduler/src/: dag.rs  error.rs  executor.rs  lib.rs  scheduler.rs
cis-common/cis-storage/: Cargo.toml
cis-common/cis-storage/src/: error.rs  lib.rs  memory.rs  storage.rs
cis-common/cis-storage/tests/: placeholder.rs
cis-common/cis-traits/: Cargo.toml
cis-common/cis-traits/src/: agent.rs  lib.rs  lifecycle.rs  memory.rs  scheduler.rs  storage.rs
cis-common/cis-traits/tests/: placeholder.rs
cis-common/cis-types/: Cargo.toml
cis-common/cis-types/src/: debt.rs  lib.rs  memory.rs  skill.rs  task.rs
cis-common/cis-types/tests/: placeholder.rs
cis-common/cis-vector/: Cargo.toml
cis-common/cis-vector/src/: error.rs  hnsw.rs  lib.rs  vector.rs
cis-core/: Cargo.toml  SHAME_LIST.md  TECHNICAL_DEBT.md
cis-core/benches/: BENCHMARKS_SUMMARY.md  README.md  agent_teams_benchmarks.rs  dag_execution.rs  dag_operations.rs  database_operations.rs  skill_dispatch.rs  task_manager.rs  wasm_runtime.rs  weekly_archived_memory.rs
cis-core/docs/: agent_federation_protocol.md  claude_persistent_usage.md
cis-core/examples/: acl_demo.rs  claude_persistent_example.rs  compatibility_db_demo.rs  config_demo.rs  config_merge_demo.rs  di_basic_usage.rs  di_service_with_deps.rs  di_test_with_mocks.rs  multi_agent_executor.rs  skill_router_demo.rs  todo_monitor_example.rs
cis-core/fuzz/: Cargo.toml
cis-core/fuzz/fuzz_targets/: dag_parser.rs  did_parser.rs  message_parser.rs
cis-core/src/: container.rs  error.rs  lib.rs  types.rs
cis-core/src/agent/: bridge.rs  builder.rs  config.rs  executor.rs  federation_client.rs  guard.rs  guard_design.md  leak_detector.rs  mod.rs  process_detector.rs  receptionist.rs  worker.rs
cis-core/src/ai/: claude.rs  embedding.rs  embedding_download.rs  embedding_fastembed.rs  embedding_init.rs  embedding_service.rs  kimi.rs  mod.rs  opencode.rs
cis-core/src/cache/: architecture.md  batch_ops.rs  config.rs  lru.rs  mod.rs
cis-core/src/cli/: mod.rs  output.rs  schema.rs
cis-core/src/config/: encryption.rs  loader.rs  mod.rs  network.rs  p2p.rs  security.rs  storage.rs  wasm.rs
cis-core/src/conversation/: context.rs  mod.rs
cis-core/src/decision/: arbitration.rs  config.rs  confirmation.rs  countdown.rs  mod.rs
cis-core/src/engine/: mod.rs  patterns.rs  scanner.rs  types.rs
cis-core/src/error/: adapter.rs  legacy.rs  macros.rs  mod.rs  test_utils.rs  unified.rs
cis-core/src/event_bus/: handler.rs  memory.rs  mod.rs
cis-core/src/events/: domain.rs  mod.rs
cis-core/src/glm/: mod.rs
cis-core/src/identity/: did.rs  mod.rs  ssh_key.rs
cis-core/src/init/: mod.rs  wizard.rs
cis-core/src/intent/: mod.rs
cis-core/src/lock_timeout/: MIGRATION_GUIDE.md  async_mutex.rs  async_rwlock.rs  design.md  mod.rs  monitor.rs
cis-core/src/matrix/: anchor.rs  bridge.rs  broadcast.rs  element_detect.rs  error.rs  federation_impl.rs  mod.rs  nucleus.rs  presence.rs  receipts.rs  server.rs  server_manager.rs  store.rs  store_social.rs  typing.rs
cis-core/src/memory/: encryption.rs  encryption_v2.rs  mod.rs  refactor_plan.md  scope.rs  service.rs  weekly_archived.rs  weekly_archived.rs.bak2
cis-core/src/network/: acl.rs  (+17 more)
cis-core/tests/: agent_teams_integration_test.rs  agent_teams_integration_tests.rs  container_production_test.rs  conversation_context_test.rs  conversation_recovery_test.rs  cross_project_recovery_test.rs  dag_integration_test.rs  dag_persistence_test.rs  event_bus_tests.rs  federation_integration.rs  full_integration_test.rs  intent_parser_test.rs  memory_service_test.rs  no_hallucination_test.rs  p2p_integration.rs  p2p_integration_test.rs  performance_test.rs  rag_flow_test.rs  secure_p2p_integration_test.rs  skill_automation_test.rs  skill_router_test.rs  vector_integration_test.rs  vector_storage_test.rs  wasm_integration.rs  websocket_integration_test.rs
cis-gui/: Cargo.toml
cis-gui/src/: REFACTORING_SUMMARY.md  app.rs  app_element.rs  decision_panel.rs  glm_panel.rs  main.rs  mvvm_design.md  node_manager.rs  node_tabs.rs  remote_session.rs  terminal_panel.rs  theme.rs
cis-node/: Cargo.toml
cis-node/src/: lib.rs  main.rs
cis-node/tests/: cli_integration_test.rs
cis-skill-sdk/: Cargo.toml  README.md
cis-skill-sdk/cis-skill-sdk-derive/: Cargo.toml
cis-skill-sdk/examples/: hello_skill.rs
cis-skill-sdk/src/: ai.rs  error.rs  host.rs  im.rs  lib.rs  skill.rs  types.rs
crates/cis-capability/: Cargo.toml
crates/cis-mcp-adapter/: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dag_parser.rs  message_parser.rs  skill_manifest.rs
skills/cis-feishu-im/: CURRENT_STATUS.md  Cargo.toml  DESIGN.md  README.md  REFACTOR_SUMMARY.md  REQUIREMENTS.md
skills/dag-executor/: Cargo.toml
skills/im/: Cargo.toml
skills/matrix-register-skill/: Cargo.toml  SKILL.md
skills/memory-organizer/: Cargo.toml
tools/: Cargo.toml  decrypt_config.rs  migrate_keys.rs
tools/p2p/: migrate_dht.rs
(+1112 files in other folders)
