[workspace]
resolver = "2"

members = [
    "cis-core",
    "cis-node",
    "cis-skill-sdk",
    "cis-skill-sdk/cis-skill-sdk-derive",
    "crates/cis-capability",
    "crates/cis-mcp-adapter",
    "skills/init-wizard",
    "skills/push-client",
    "skills/memory-organizer",
    "skills/ai-executor",
    "skills/im",
    "skills/dag-executor",
    "skills/matrix-register-skill",
    "cis-gui",
]
