[workspace]
resolver = "2"

members = [
    "cis-common/cis-types",
    "cis-common/cis-traits",
    "cis-common/cis-storage",
    "cis-common/cis-memory",
    "cis-common/cis-scheduler",
    "cis-common/cis-vector",
    "cis-common/cis-p2p",
    "cis-core",
    "cis-node",
    "cis-skill-sdk",
    "cis-skill-sdk/cis-skill-sdk-derive",
    "crates/cis-capability",
    "crates/cis-mcp-adapter",
    "skills/init-wizard",
    "skills/push-client",
    "skills/memory-organizer",
    "skills/ai-executor",
    "skills/im",
    "skills/dag-executor",
    "skills/matrix-register-skill",
    "cis-gui",
]

# P1-3: 统一 workspace 依赖版本
# 避免不同 crate 使用不同版本导致的编译膨胀和潜在不兼容
[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "signal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# HTTP
reqwest = { version = "0.11", features = ["json", "stream"] }

# Crypto
ed25519-dalek = "2.0"
sha2 = "0.10"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Networking
quinn = "0.10"

# WebAssembly
wasm3 = { git = "https://github.com/wasm3/wasm3", tag = "v0.5.0" }

# Workspace crates
cis-core = { path = "cis-core" }
cis-node = { path = "cis-node" }

# cis-common crates
cis-types = { path = "cis-common/cis-types", version = "1.2.0" }
cis-traits = { path = "cis-common/cis-traits", version = "1.2.0" }
cis-storage = { path = "cis-common/cis-storage", version = "1.2.0" }
cis-memory = { path = "cis-common/cis-memory", version = "1.2.0" }
cis-scheduler = { path = "cis-common/cis-scheduler", version = "1.2.0" }
cis-vector = { path = "cis-common/cis-vector", version = "1.2.0" }
cis-p2p = { path = "cis-common/cis-p2p", version = "1.2.0" }
