[workspace]
resolver = "2"
members = [
    "cis-types",
    "cis-traits",
    "cis-storage",
    "cis-memory",
    "cis-scheduler",
    "cis-vector",
    "cis-p2p",
]

[workspace.package]
version = "1.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["CIS Team"]
license = "MIT"
repository = "https://github.com/cis-projects/cis"

[workspace.dependencies]
cis-types = { path = "cis-types", version = "1.2.0" }
cis-traits = { path = "cis-traits", version = "1.2.0" }

tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1"

anyhow = "1.0"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

rusqlite = { version = "0.32", features = ["bundled"] }
