[package]
name = "cis-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["CIS Team"]
description = "Core library for CIS (Cluster of Independent Systems)"
license = "MIT"

[lib]
name = "cis_core"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }

# Database (with encryption support planned)
rusqlite = { version = "0.30", features = ["bundled", "backup"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"], optional = true }

# Configuration
toml = "0.8"

# Directory utilities
dirs = "5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Protobuf (planned for P2P)
prost = { version = "0.12", optional = true }
tonic = { version = "0.10", optional = true }

# Cryptography (planned for DID and encryption)
ed25519-dalek = { version = "2", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
sha2 = { version = "0.10", optional = true }

# Claude CLI integration
which = "6.0"
shellexpand = "3.1"

# Git integration
git2 = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[features]
default = []

# Encryption features (planned for Phase 2)
encryption = ["sqlx", "ed25519-dalek", "chacha20poly1305", "argon2", "sha2"]

# P2P features (planned for Phase 4)
p2p = ["prost", "tonic", "encryption"]

# Full feature set
full = ["encryption", "p2p"]
