[package]
name = "cis-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["CIS Team"]
description = "Core library for CIS (Cluster of Independent Systems)"
license = "MIT"

[lib]
name = "cis_core"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "signal"] }
futures = "0.3"

# Matrix protocol support
ruma = { version = "0.10", features = ["client-api-c", "federation-api-c"] }

# HTTP server (for Matrix API)
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client (for Federation)
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
# Password input (for interactive config)
rpassword = "7.3"
# Database (with encryption support planned)
rusqlite = { version = "0.30", features = ["bundled", "backup", "hooks"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"], optional = true }

# Vector extension for SQLite
sqlite-vec = { version = "0.1", optional = true }

# Configuration
toml = "0.8"

# Directory utilities
dirs = "5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
md5 = "0.7"

# Protobuf (planned for P2P)
prost = { version = "0.12", optional = true }
tonic = { version = "0.10", optional = true }

# P2P Networking
quinn = "0.10"
rcgen = "0.12"
mdns-sd = "0.10"
rustls = "0.21"
rustls-native-certs = "0.6"

# DHT for P2P discovery
# Using a lightweight DHT implementation
# For production, consider libp2p-kad or similar

# NAT traversal
stun = "0.5"  # STUN client
igd = "0.12"  # UPnP IGD client for port mapping

# PTY for remote agent sessions
portable-pty = "0.8"
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec"] }

# WebSocket Federation
tokio-tungstenite = "0.21"

# Noise Protocol for encrypted WebSocket connections
snow = "0.9"

# Cryptography for DID and encryption
ed25519-dalek = "2"
chacha20poly1305 = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
sha2 = "0.10"
hex = "0.4"

# Claude CLI integration
which = "6.0"
shellexpand = "3.1"

# Git integration
git2 = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Random
rand = "0.8"

# System info
whoami = "1.4"
sysinfo = "0.30"
libc = "0.2"

# Serde bytes
serde_bytes = "0.11"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Concurrent hash map for cache
dashmap = "5"

# Terminal and output utilities
atty = "0.2"
colored = "2.0"

# Regex for pattern matching
regex = "1"

# Temporary files
tempfile = "3"

# Async traits
async-trait = "0.1"

# WASM Runtime
wasmer = { version = "4.0", optional = true }
wasmer-compiler-cranelift = { version = "4.0", optional = true }

# ONNX Runtime for local embeddings (optional, with CUDA support)
ort = { version = "2.0.0-rc.9", optional = true }

# Tokenization for embeddings
tokenizers = { version = "0.15", optional = true }

# N-dimensional arrays for tensor operations
ndarray = { version = "0.15", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[features]
default = ["encryption"]

# WASM support
wasm = ["wasmer", "wasmer-compiler-cranelift"]

# Encryption features (planned for Phase 2)
encryption = ["sqlx", "chacha20poly1305", "argon2"]

# P2P features (planned for Phase 4)
p2p = ["prost", "tonic", "encryption"]



# Vector intelligence features
vector = ["ort", "tokenizers", "ndarray", "sqlite-vec"]

# Full feature set
full = ["encryption", "p2p", "vector"]
