[package]
name = "cis-core"
version = "1.1.5"
edition = "2021"
rust-version = "1.70"
authors = ["CIS Team"]
description = "Core library for CIS (Cluster of Independent Systems)"
license = "MIT"

[lib]
name = "cis_core"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "signal"] }
futures = "0.3"

# Matrix protocol support
ruma = { version = "0.10", features = ["client-api-c", "federation-api-c"] }

# HTTP server (for Matrix API)
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client (for Federation)
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }

# DNS resolution for federation discovery
trust-dns-resolver = { version = "0.23", optional = true }
# Password input (for interactive config)
rpassword = "7.3"
# Database (with encryption support planned)
rusqlite = { version = "0.32", features = ["bundled", "backup", "hooks"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "runtime-tokio", "macros"], optional = true }

# Vector extension for SQLite
sqlite-vec = { version = "0.1", optional = true }

# Configuration
toml = "0.8"

# Directory utilities
dirs = "5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"
md5 = "0.7"

# Protobuf (planned for P2P)
prost = { version = "0.12", optional = true }
tonic = { version = "0.10", optional = true }

# P2P Networking
quinn = { version = "0.11", optional = true }
rcgen = { version = "0.12", optional = true }
mdns-sd = { version = "0.10", optional = true }
rustls = { version = "0.23", optional = true }
rustls-native-certs = { version = "0.6", optional = true }

# DHT for P2P discovery
# Using a lightweight DHT implementation
# For production, consider libp2p-kad or similar

# NAT traversal
stun = { version = "0.5", optional = true }  # STUN client
igd = { version = "0.12", optional = true }  # UPnP IGD client for port mapping

# PTY for remote agent sessions
portable-pty = "0.8"
bytes = "1.11.1"
tokio-util = { version = "0.7", features = ["codec"] }

# WebSocket Federation
tokio-tungstenite = "0.21"

# Noise Protocol for encrypted WebSocket connections
snow = "0.9"

# Cryptography for DID and encryption
ed25519-dalek = { version = "2", features = ["rand_core", "digest"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "reusable_secrets"] }
curve25519-dalek = "4.1"
signature = "2.2"
bip39 = "2.1"
chacha20poly1305 = { version = "0.10", optional = true }
argon2 = "0.5"  # P0-3: 改为必需依赖（密钥安全是核心功能）
sha2 = "0.10"
hex = "0.4"
ssh-key = { version = "0.6", features = ["ed25519", "std", "encryption"] }
hmac = "0.12"
base64 = "0.22"

# Claude CLI integration
which = "6.0"
shellexpand = "3.1"

# Git integration
git2 = "0.18"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Concurrency (P0-4: RwLock 写者饥饿修复)
parking_lot = { version = "0.12", optional = true }

# Random
rand = "0.8"

# System info
whoami = "1.4"
gethostname = "0.4"
sysinfo = "0.30"
libc = "0.2"

# Serde bytes
serde_bytes = "0.11"

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }

# Concurrent hash map for cache
dashmap = "5"

# Terminal and output utilities
# atty 已移除 (P1-14): 使用 std::io::IsTerminal 替代 (Rust 1.70+)
colored = "2.0"

# Regex for pattern matching
regex = "1"

# Directory walking for scanner
walkdir = "2"

# IP network utilities for ACL
ipnetwork = "0.20"

# Temporary files
tempfile = "3"

# Async traits
async-trait = "0.1"

# WASM Runtime
wasmer = { version = "4.0", optional = true }
wasmer-compiler-cranelift = { version = "4.0", optional = true }
wasmparser = { version = "0.115", optional = true }

# WASM Runtime v2 (Enhanced Security)
wasmtime = { version = "19.0", optional = true, features = ["async"] }
wasmtime-wasi = { version = "19.0", optional = true }

# FastEmbed for local embeddings (replaces ort)
fastembed = { version = "4.0", optional = true }

# N-dimensional arrays for tensor operations
ndarray = { version = "0.15", optional = true }

# E2EE dependencies
vodozemac = { version = "0.7", optional = true }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
downcast-rs = "1.2"

[features]
# =============================================================================
# Feature Flags Configuration
# =============================================================================
# CIS uses feature flags to enable/disable functionality for different use cases:
#
# Default Feature Set:
# - encryption: End-to-end encryption and secure key derivation
# - vector: Semantic search and AI embeddings
# - p2p: Peer-to-peer networking and NAT traversal
# - wasm: WebAssembly skill runtime
#
# Minimal Builds:
# - Use --no-default-features and selectively enable features
# - Example: cargo build --no-default-features --features "vector,wasm"
#
# Feature Dependencies:
# - p2p depends on encryption (for secure QUIC connections)
# - full includes all features for complete functionality
# =============================================================================

# Production features - REQUIRED for production builds
# DO NOT disable these features in production - will cause compile errors
default = ["encryption", "vector", "p2p", "wasm", "parking_lot"]  # P0-4: 默认启用 parking_lot 避免写者饥饿

# WASM Runtime Support
# - wasm: Wasmer-based runtime (v1, stable)
# - wasm-v2: Wasmtime-based runtime (v2, enhanced security)
# Note: Only one WASM runtime should be enabled at a time
wasm = ["wasmer", "wasmer-compiler-cranelift", "wasmparser"]
wasm-v2 = ["wasmtime", "wasmtime-wasi"]

# Encryption Features (Phase 2)
# - sqlx: Async database layer for encrypted storage
# - chacha20poly1305: AEAD encryption for data at rest
# - argon2: Secure password-based key derivation
# - vodozemac: Matrix E2EE cryptographic primitives
encryption = ["sqlx", "chacha20poly1305", "dep:vodozemac"]  # argon2 现在是必需依赖 (P0-3)

# P2P Networking Features (Phase 4)
# - prost/tonic: gRPC for P2P RPC
# - quinn: QUIC protocol for secure transport
# - rcgen: Certificate generation for TLS
# - mdns-sd: mDNS local network discovery
# - rustls: TLS implementation for QUIC
# - stun/igd: NAT traversal via STUN and UPnP
# Note: p2p requires encryption for secure connections
p2p = ["prost", "tonic", "encryption", "quinn", "rcgen", "mdns-sd", "rustls", "rustls-native-certs", "stun", "igd"]

# Vector Intelligence Features
# - fastembed: Local embedding model (no API calls needed)
# - sqlite-vec: Vector similarity search in SQLite
# Note: Requires model download on first use (~100MB)
vector = ["fastembed", "sqlite-vec"]

# FastEmbed Dependency
# - fastembed: Embedding model runtime
# - ndarray: N-dimensional arrays for tensor operations
# Note: Internal feature, use 'vector' instead
fastembed = ["dep:fastembed", "dep:ndarray"]

# Full Feature Set
# Includes all CIS capabilities for complete functionality
full = ["encryption", "p2p", "vector", "federation"]

# Matrix Federation
# - trust-dns-resolver: DNS SRV record lookup for federation
federation = ["trust-dns-resolver"]

# Test Utilities
# Empty feature for external test crates to depend on
test-utils = []

[[bench]]
name = "agent_teams_benchmarks"
harness = false

# CIS v1.1.6 Core Module Benchmarks
[[bench]]
name = "database_operations"
harness = false

[[bench]]
name = "dag_operations"
harness = false

[[bench]]
name = "weekly_archived_memory"
harness = false

[[bench]]
name = "task_manager"
harness = false
