[package]
name = "cis-node"
version = "1.1.2"
edition = "2021"

[dependencies]
cis-core = { path = "../cis-core", features = ["vector", "p2p"] }
clap = { version = "4.0", features = ["derive"] }
clap_complete = "4.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
toml = "0.8"
rand = "0.8"
hex = "0.4"
uuid = { version = "1.6", features = ["v4"] }
which = "6.0"
tokio-tungstenite = "0.24"
whoami = "1.5"
gethostname = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dirs = "5.0"
libc = "0.2"
crossterm = "0.27"
colored = "2.0"
indicatif = "0.17"

[features]
default = ["vector", "p2p"]
vector = []
p2p = []

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
tokio-test = "0.4"
