[package]
name = "cis-node"
version = "1.1.5"
edition = "2021"

[dependencies]
cis-core = { path = "../cis-core", features = ["vector", "p2p"] }
# Workspace dependencies (P1-3: 统一版本)
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = "4.0"
serde_yaml = "0.9"
chrono = "0.4"
toml = "0.8"
rand = "0.8"
hex = "0.4"
uuid = { version = "1.6", features = ["v4"] }
which = "6.0"
tokio-tungstenite = "0.24"
whoami = "1.5"
gethostname = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dirs = "5.0"
libc = "0.2"
crossterm = "0.27"
colored = "2.0"
indicatif = "0.17"
walkdir = "2.4"

[features]
default = ["vector", "p2p"]
vector = []
p2p = []

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
tokio-test = "0.4"
