[package]
name = "cis-skill-sdk"
version = "1.1.0"
edition = "2021"
description = "CIS Skill SDK - 统一 Skill 开发框架"
license = "MIT"
authors = ["CIS Team"]

[features]
default = ["native"]
native = ["tokio", "async-trait", "thiserror", "serde_json"]
wasm = ["serde-json-core", "hashbrown"]
im = []  # IM 功能支持

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
serde-json-core = { version = "0.5", optional = true }
hashbrown = { version = "0.14", optional = true }
thiserror = { version = "1", optional = true }
tracing = { version = "0.1", default-features = false }

# Native 模式依赖
tokio = { version = "1", features = ["rt", "sync"], optional = true }
async-trait = { version = "0.1", optional = true }

# Derive 宏
cis-skill-sdk-derive = { path = "cis-skill-sdk-derive", version = "1.1.0" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "hello_skill"
path = "examples/hello_skill.rs"
