[package]
name = "cis-core-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dependencies.cis-core]
path = "../cis-core"

[[bin]]
name = "dag_parser"
path = "fuzz_targets/dag_parser.rs"
test = false
doc = false

[[bin]]
name = "skill_manifest"
path = "fuzz_targets/skill_manifest.rs"
test = false
doc = false

[[bin]]
name = "message_parser"
path = "fuzz_targets/message_parser.rs"
test = false
doc = false
