[package]
name = "cis-capability"
version = "1.1.1"
edition = "2021"
description = "CIS Core Capability Layer - Unified skill, memory, and context services"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# File system
notify = "6.1"
walkdir = "2.5"

# Git operations
git2 = "0.18"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"

# Utils
dirs = "5.0"
which = "6.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
