[package]
name = "cis-mcp-adapter"
version = "1.1.2"
edition = "2021"
description = "MCP adapter for CIS capabilities - exposes skills to AI agents"

[dependencies]
cis-capability = { path = "../cis-capability" }
cis-core = { path = "../../cis-core" }

# MCP SDK
rmcp = { version = "0.1", features = ["server"] }

# Async
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
toml = "0.8"

[[bin]]
name = "cis-mcp"
path = "src/main.rs"
