[package]
name = "cis-feishu-im"
version = "0.1.0"
edition = "2021"
description = "CIS Feishu IM Skill - 飞书即时通讯集成"
authors = ["CIS Team"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = ["tokio", "async-trait", "axum", "tower", "tower-http", "larkrs-client", "sqlx"]
wasm = []

[dependencies]
# CIS SDK
cis-skill-sdk = { path = "../../cis-skill-sdk", features = ["native", "im"] }
cis-core = { path = "../../cis-core" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime (Native mode)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "signal"], optional = true }
async-trait = { version = "0.1", optional = true }

# HTTP Server (Webhook)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["trace", "cors"], optional = true }

# Feishu/Lark SDK
larkrs-client = { version = "0.1", optional = true }
reqwest = { version = "0.11", features = ["json"] }

# Error handling
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database (SQLite)
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"], optional = true }

# Utilities
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"
